--- a/index.html
+++ b/index.html
@@ -13,8 +13,24 @@
         </div>
         <div class="text-center">
             <p>Rua Wanderley Agra de Azevedo.</p>
-            <p class="bg-green-700 px-3 rounded-md">Aberto de seg a dom das 18h áte 23h</p>
+            <p class="bg-green-700 px-3 rounded-md my-1">Aberto de seg a dom das 18h áte 23h</p>
         </div>
     </header>
+    <aside class="w-1/2">
+        <details name="menu" class="cursor-pointer p-3 ">
+            <summary class="list-none border-y-2 border-black">Pizzas</summary>
+            <ul class="pl-4">
+                <li class="hover:bg-slate-500"><a href="#">Pizzas Tradicionas</a></li>
+                <li class="hover:bg-slate-500"><a href="#">Pizzas Doces</a></li>
+            </ul>
+        </details>
+        <details name="menu" class="cursor-pointer">
+            <summary class="list-none">Pasteis</summary>
+            <ul class="pl-4">
+                <li class="hover:bg-slate-500"><a href="#">Pasteis Tradicionas</a></li>
+                <li class="hover:bg-slate-500"><a href="#">Pasteis Doces</a></li>
+            </ul>
+        </details>
+    </aside>
 </body>
 </html>
