--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             </div>
             <h2>Escolha o tamanho:</h2>
             <div class="tm flex rounded-lg overflow-hidden font-bold bg-gray-200 cursor-pointer mt-2">
-                <p data-key="0" class="tm_p p-1 w-1/4 bg-red-600 text-white  text-center border-r-2 border-black">P</p>
-                <p data-key="1" class="tm_p p-1 w-1/4 text-center border-r-2 border-black">M</p>
-                <p data-key="2" class="tm_p p-1 w-1/4 text-center border-r-2 border-black">G</p>
-                <p data-key="3" class="tm_p p-1 w-1/4 text-center">GG</p>
+                <p id="0" class="tm_p p-1 w-1/4 bg-red-600 text-white  text-center border-r-2 border-black">P</p>
+                <p id="1" class="tm_p p-1 w-1/4 text-center border-r-2 border-black">M</p>
+                <p id="2" class="tm_p p-1 w-1/4 text-center border-r-2 border-black">G</p>
+                <p id="3" class="tm_p p-1 w-1/4 text-center">GG</p>
             </div>
             <div class="flex m-3 h-9 justify-between font-semibold text-2xl">
                 <p class="" id="preco"></p>
@@ -52,7 +52,7 @@
             </div>
             <div class="flex mt-3">
                 <button id="voltar" class="bg-gray-300 font-bold p-1  rounded-lg text-xl w-2/5 mr-2">Voltar</button>
-                <button class="bg-green-500 text-white font-bold p-1 rounded-lg text-xl w-3/5">Adicionar ao Carrinho</button>
+                <button id="carrinho" class="bg-green-500 text-white font-bold p-1 rounded-lg text-xl w-3/5">Adicionar ao Carrinho</button>
             </div>
         </div>
     </div>
