correções de erros

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p class="" id="preco"></p>
                 <div class="flex">
                     <div class="bg-gray-300 px-2 text-sm font-bold cursor-pointer">-</div>
-                    <div class="bg-white border-2 px-2 text-sm font-bold">1</div>
+                    <div class="qtd-produto bg-white border-2 px-2 text-sm font-bold"></div>
                     <div class="bg-gray-300 px-2 text-sm font-bold cursor-pointer">+</div>
                 </div>
             </div>
@@ -92,6 +92,9 @@
         </div>
         <div id="petiscos" class="campo_card">
             <h2 class="titulo_cmp_card">Petiscos</h2>
+        </div>
+        <div id="sucos" class="campo_card">
+            <h2 class="titulo_cmp_card">Sucos</h2>
         </div>
     </main>
     <script src="script.js"></script>
