--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <div class="flex m-3 h-9 justify-between font-semibold text-2xl">
                 <p class="" id="preco"></p>
                 <div class="flex">
-                    <div class="bg-gray-300 px-2 text-sm font-bold cursor-pointer">-</div>
+                    <div id="menos_produtos" class="bg-gray-300 px-2 text-sm font-bold cursor-pointer">-</div>
                     <div class="qtd-produto bg-white border-2 px-2 text-sm font-bold"></div>
-                    <div class="bg-gray-300 px-2 text-sm font-bold cursor-pointer">+</div>
+                    <div id="mais_produtos" class="bg-gray-300 px-2 text-sm font-bold cursor-pointer">+</div>
                 </div>
             </div>
             <div class="flex mt-3">
