--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <!-- aside carinho -->
     <aside id="box_carrinho" class="fixed h-screen overflow-x-hidden top-0 bg-gray-100 z-30 left-full">
         <header class="flex border-b border-black text-2xl font-bold">
-            <button class="absolute">Voltar</button>
+            <button class="voltar_carrinho absolute">Voltar</button>
             <h2 class="w-full text-center">carrinho</h2>
         </header>
         <main>
@@ -119,7 +119,7 @@
                 <span>R$ 100,00</span>
             </div>
             <div class="flex">
-                <button class="w-1/2 m-2 p-1 rounded-md font-semibold text-xl bg-gray-300">Cancelar</button>
+                <button class="voltar_carrinho w-1/2 m-2 p-1 rounded-md font-semibold text-xl bg-gray-300">Cancelar</button>
                 <button class="w-1/2 m-2 p-1 rounded-md font-semibold text-xl bg-green-600 text-white">Comprar</button>
             </div>
         </main>
