--- a/index.html
+++ b/index.html
@@ -103,10 +103,9 @@
     <!-- aside carinho -->
     <aside id="box_carrinho" class="fixed h-screen overflow-x-hidden top-0 bg-gray-100 z-30 left-full">
         <header class="flex border-b border-black text-2xl font-bold">
-            <button class="voltar_carrinho absolute">Voltar</button>
             <h2 class="w-full text-center">carrinho</h2>
         </header>
-        <main class="p-2">
+        <main >
             <div id="pdts_carrinho">
                 <div class="my-1 border-b border-black flex items-center">
                     <div class="w-1/5 ml-2 rounded-md overflow-hidden">
