--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- fim do card -->
 
     <!-- box-card -->
-    <div id="box_card" class="h-screen w-full fixed bg-black/50 flex flex-col justify-center items-center z-10 hidden">
+    <div id="box_card" class="h-screen w-full fixed bg-black/50 flex flex-col justify-center items-center z-10 overflow-x-hidden hidden">
         <div class="box_conteiner bg-white w-11/12 max-w-4xl  rounded-lg p-3 shadow-xl shadow-black/60 ">
             <div class="flex mb-3">
                 <div class="w-2/5">
@@ -38,14 +38,14 @@
             </div>
             <h2>Escolha o tamanho:</h2>
             <div id="tm_4" class="tm flex rounded-lg overflow-hidden font-bold bg-gray-200 cursor-pointer mt-2">
-                <p id="0" class="tm_p p-1 w-1/4 bg-red-600 text-white  text-center border-r-2 border-black">P</p>
-                <p id="1" class="tm_p p-1 w-1/4 text-center border-r-2 border-black">M</p>
-                <p id="2" class="tm_p p-1 w-1/4 text-center border-r-2 border-black">G</p>
-                <p id="3" class="tm_p p-1 w-1/4 text-center">GG</p>
+                <p id="0" data-key="P" class="tm_p p-1 w-1/4  text-center border-r-2 border-black">P</p>
+                <p id="1" data-key="M" class="tm_p p-1 w-1/4 text-center border-r-2 border-black">M</p>
+                <p id="2" data-key="G" class="tm_p p-1 w-1/4 text-center border-r-2 border-black">G</p>
+                <p id="3" data-key="GG" class="tm_p p-1 w-1/4 text-center">GG</p>
             </div>
             <div id="tm_2" class="w-1/2 tm flex rounded-lg overflow-hidden font-bold bg-gray-200 cursor-pointer mt-2">
-                <p id="0" class="tm_p p-1 w-1/2 bg-red-600 text-white  text-center border-r-2 border-black">sem leite</p>
-                <p id="1" class="tm_p p-1 w-1/2 text-center">com leite</p>
+                <p id="0" data-key="P" class="tm_p p-1 w-1/2 text-center border-r-2 border-black">sem leite</p>
+                <p id="1" data-key="M" class="tm_p p-1 w-1/2 text-center">com leite</p>
             </div>
             <div class="flex m-3 h-9 justify-between font-semibold text-2xl">
                 <p class="" id="preco"></p>
@@ -67,7 +67,7 @@
         <span class="menu m-1 material-symbols-outlined">
             menu
         </span>
-        <span class="carrinho relative material-symbols-outlined after:content-['05'] after:absolute after:bg-red-600 after:text-white after:text-sm after:-right-3 after:-top-1 after:rounded-full after:w-5 after:h-5 after:flex after:justify-center after:items-center after:font-semibold after:font-mono">
+        <span data-content="0" class="carrinho relative material-symbols-outlined after:content-[attr(data-content)] after:absolute after:bg-red-600 after:text-white after:text-sm after:-right-3 after:-top-1 after:rounded-full after:w-5 after:h-5 after:flex after:justify-center after:items-center after:font-semibold after:font-mono">
             shopping_bag
         </span>
     </header>
