add itens no json

--- a/index.html
+++ b/index.html
@@ -169,10 +169,13 @@
     <!-- fim do aside carinho -->
     <main class="max-w-5xl m-auto">
         <div id="pizzas" class="campo_card">
-            <h2 class="titulo_cmp_card">Pizzas</h2>
+            <h2 class="titulo_cmp_card">Pizzas Clássicas</h2>
+        </div>
+        <div id="pizzas_especiais" class="campo_card">
+            <h2 class="titulo_cmp_card">Pizzas Especiais</h2>
         </div>
         <div id="pizzas_doces" class="campo_card">
-            <h2 class="titulo_cmp_card">Pizzas doces</h2>
+            <h2 class="titulo_cmp_card">Pizzas Doces</h2>
         </div>
         <div id="petiscos" class="campo_card">
             <h2 class="titulo_cmp_card">Petiscos</h2>
