--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p id="3" data-key="GG" class="tm_p p-1 w-1/4 text-center">GG</p>
                 </div>
                 <h2>Adicionar borda recheada?</h2>
-                <input type="radio" name="borda" id="nao" checked>
+                <input type="radio" name="borda" id="nao" >
                 <label for="nao">Não</label>
                 <input type="radio" name="borda" id="sim">
                 <label for="sim">Sim</label>
