melhorias na função borda

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <label for="sim">Sim</label>
                     <div class="select hidden">
                         <select name="borda" id="list_bordas" class="border-gray-200 border-2 rounded-md">
-                            <option value="" selected disabled>selecione a borda</option>
+                            <option value="" selected >selecione a borda</option>
                             <option value="0">chocolate</option>
                             <option value="1">cheddar</option>
                             <option value="2">catupiry</option>
