add mais funções

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
             <div class="obs m-2">
                 <h4 class="font-bold">Observações:</h4>
-                <textarea name="" id="" placeholder=" Ex: " rows="3" class="w-full px-2 resize-none"></textarea>
+                <textarea name="" id="obs" placeholder=" Ex: " rows="3" class="w-full px-2 resize-none"></textarea>
             </div>
             <div id="valor_carrinho" class="font-bold px-4 text-xl flex justify-between">
                 <p>Valor Total:</p>
