--- a/index.html
+++ b/index.html
@@ -254,7 +254,10 @@
 
             <div class="qtTroco hidden">
                 <h4>quanto de troco? *</h4>
-                <input type="number" name="" id="T_valor" class="rounded-xl">
+                <div class="flex rounded-xl bg-white w-1/4">
+                    <h4 class="w-1/6 ml-2">R$</h4>
+                    <input type="text" name="" id="T_valor" class=" w-3/4 rounded-xl outline-none focus:border-none pl-1">
+                </div>
             </div>
         </main>
         <footer class="flex flex-col gap-2 fixed bottom-0 w-full bg-white">
