style input troco

--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
 
             <div class="qtTroco hidden">
                 <h4>quanto de troco? *</h4>
-                <div class="flex rounded-xl bg-white w-1/4">
-                    <h4 class="w-1/6 ml-2">R$</h4>
-                    <input type="text" name="" id="T_valor" class=" w-3/4 rounded-xl outline-none focus:border-none pl-1">
+                <div class="flex ">
+                    <h4 class="px-2 bg-white rounded-xl ">R$<input type="text" name="" id="T_valor" class=" w-14 rounded-xl outline-none focus:border-none pl-1"></h4>
+                    
                 </div>
             </div>
         </main>
