campo endereço finalizado

--- a/index.html
+++ b/index.html
@@ -215,6 +215,10 @@
                     <label for="rural">Zona Rural</label>
                 </div>
             </div>
+            <div>
+                <label for="input_name">Nome:</label>
+                <input type="text" name="I_name" id="input_name" required>
+            </div>
 
             <div class="flex">
                 <div>
