--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <label for="pri_sabor">escolha o primeiro sabor</label>
                     <select name="P_sabor" id="pri_sabor" class="sabores__pizzas bg-gray-400 rounded-md" required>
                         <option value="">selecione o primeiro sabor</option>
-                        <optgroup label="Clássicas" class="pz__classic"></optgroup>
+                        <optgroup label="Clássicas" class="pz__classic" id="P__classic"></optgroup>
 
                         <optgroup label="Especiais" class="pz__especiais"></optgroup>
 
@@ -52,7 +52,7 @@
                     <label for="se_sabor">escolha o Segundo sabor</label>
                     <select name="S_sabor" id="se_sabor" class="bg-gray-400 rounded-md" required>
                         <option value="">selecione o segundo sabor</option>
-                        <optgroup label="Clássicas" class="pz__classic"></optgroup>
+                        <optgroup label="Clássicas" class="pz__classic" id="P2__classic"></optgroup>
 
                         <optgroup label="Especiais" class="pz__especiais"></optgroup>
 
